src/it/resources/regression/verification/invalid/BVRemainderByZero.scala
/* Copyright 2009-2016 EPFL, Lausanne */

import stainless.lang._
import stainless.collection._
import stainless._

object BVRemainderByZero {

  def remByZero(x: Int): Boolean = {
    (x % 0 == 10)
  }
  
}
